# hbicproc

./: README_PIPELINE.md  pipeline_config.json  pipeline_config.sample.json  pyproject.toml
pipeline/: __init__.py  annotate_protocol.py  cli.py  config.py  container.py  logger.py  pipeline.py  session_names.example.tsv  state.py  status.py  todo_architecture.txt  utils.py  xnat_credentials.example.json
pipeline/stages/: __init__.py  base.py  bidsify.py  download.py  preprocess.py  qc.py  qc_review.py  todo_bidsify.txt  todo_download.txt  todo_preprocess.txt  todo_qc.txt  todo_qc_review.txt  todo_validate.txt  validate.py
pipeline/steps/: __init__.py  _utils.py  bids.py  download.py  fmriprep.py  mriqc.py
