[project]
name = "hbicproc-pipeline"
version = "0.1.0"
description = "Minimal fMRI preprocessing workflow orchestrator."
requires-python = ">=3.8"
dependencies = ["questionary>=1.0", "pyxnat>=1.6", "nibabel", "pandas"]

[project.scripts]
hbicproc = "pipeline.cli:main"
pipeline = "pipeline.cli:main"
annotate_protocol = "pipeline.annotate_protocol:main"
